; ModuleID = '/home/carl/AnghaBench/linux/drivers/scsi/extr_scsi_debug.c_get_queue.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/scsi/extr_scsi_debug.c_get_queue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sdebug_queue = type { i32 }
%struct.scsi_cmnd = type { i32 }

@.str = private unnamed_addr constant [17 x i8] c"tag=%#x, hwq=%d\0A\00", align 1
@submit_queues = common dso_local global i64 0, align 8
@sdebug_q_arr = common dso_local global %struct.sdebug_queue* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.sdebug_queue* (%struct.scsi_cmnd*)* @get_queue to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.sdebug_queue* @get_queue(%struct.scsi_cmnd* %0) #0 {
  %2 = alloca %struct.scsi_cmnd*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  store %struct.scsi_cmnd* %0, %struct.scsi_cmnd** %2, align 8
  %5 = load %struct.scsi_cmnd*, %struct.scsi_cmnd** %2, align 8
  %6 = getelementptr inbounds %struct.scsi_cmnd, %struct.scsi_cmnd* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = call i32 @blk_mq_unique_tag(i32 %7)
  store i32 %8, i32* %3, align 4
  %9 = load i32, i32* %3, align 4
  %10 = call i64 @blk_mq_unique_tag_to_hwq(i32 %9)
  store i64 %10, i64* %4, align 8
  %11 = load i32, i32* %3, align 4
  %12 = load i64, i64* %4, align 8
  %13 = call i32 @pr_debug(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0), i32 %11, i64 %12)
  %14 = load i64, i64* %4, align 8
  %15 = load i64, i64* @submit_queues, align 8
  %16 = icmp sge i64 %14, %15
  %17 = zext i1 %16 to i32
  %18 = call i64 @WARN_ON_ONCE(i32 %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %21

20:                                               ; preds = %1
  store i64 0, i64* %4, align 8
  br label %21

21:                                               ; preds = %20, %1
  %22 = load %struct.sdebug_queue*, %struct.sdebug_queue** @sdebug_q_arr, align 8
  %23 = load i64, i64* %4, align 8
  %24 = getelementptr inbounds %struct.sdebug_queue, %struct.sdebug_queue* %22, i64 %23
  ret %struct.sdebug_queue* %24
}

declare dso_local i32 @blk_mq_unique_tag(i32) #1

declare dso_local i64 @blk_mq_unique_tag_to_hwq(i32) #1

declare dso_local i32 @pr_debug(i8*, i32, i64) #1

declare dso_local i64 @WARN_ON_ONCE(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
